--- a/pimpd.service
+++ b/pimpd.service
@@ -6,7 +6,7 @@ Type=simple
 User=pi
 WorkingDirectory=/home/pi/pimpd
 # ExecStart=/home/pi/pimpd/pimpd.sh
-ExecStart=/usr/bin/python /home/pi/pimpd/pimpd.sh
+ExecStart=/usr/bin/python /home/pi/pimpd/pimpd/pimpd.py
 Restart=on-failure
 PIDFile=/var/run/pimpd.pid
 
